--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "backend-lsm",
   "version": "1.0.0",
   "description": "LSM Backend Server",
-  "main": "app.js",
+  "main": "server.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
